--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <input type="text" placeholder="Inserisci Testo">
 
-    <ul>
+    <ul class="lista-eventi">
 <!--       <li>
         <p>lorem</p>
         <i class="far fa-trash-alt"></i>
